--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -176,56 +176,56 @@
 
             <div class="row">
                 <div class="column">
-                    <img class="demo cursor" src="images/c_cat.jpg" onclick="currentSlide(1)" alt="C - Cat">
+                    <img class="demo cursor" src="images/c_cat.jpg" onclick="currentSlide(1)" alt="C - Cat" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/o_owl.jpg" onclick="currentSlide(2)" alt="O - Owl">
+                    <img class="demo cursor" src="images/o_owl.jpg" onclick="currentSlide(2)" alt="O - Owl" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lake.jpg" onclick="currentSlide(3)" alt="L - Lake">
+                    <img class="demo cursor" src="images/l_lake.jpg" onclick="currentSlide(3)" alt="L - Lake" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lantern.jpg" onclick="currentSlide(4)" alt="L - Lantern">
+                    <img class="demo cursor" src="images/l_lantern.jpg" onclick="currentSlide(4)" alt="L - Lantern" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/i_icecream.jpg" onclick="currentSlide(5)" alt="I - Ice Cream">
+                    <img class="demo cursor" src="images/i_icecream.jpg" onclick="currentSlide(5)" alt="I - Ice Cream" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/n_newyork.jpg" onclick="currentSlide(6)" alt="N - New York">
+                    <img class="demo cursor" src="images/n_newyork.jpg" onclick="currentSlide(6)" alt="N - New York" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/g_giraffe.jpg" onclick="currentSlide(7)" alt="G - Giraffe">
+                    <img class="demo cursor" src="images/g_giraffe.jpg" onclick="currentSlide(7)" alt="G - Giraffe" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/a_airplane.jpg" onclick="currentSlide(8)" alt="A - Airplane">
+                    <img class="demo cursor" src="images/a_airplane.jpg" onclick="currentSlide(8)" alt="A - Airplane" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_leaf.jpg" onclick="currentSlide(9)" alt="L - Leaf">
+                    <img class="demo cursor" src="images/l_leaf.jpg" onclick="currentSlide(9)" alt="L - Leaf" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lighthouse.jpg" onclick="currentSlide(10)" alt="L - Lighthouse">
+                    <img class="demo cursor" src="images/l_lighthouse.jpg" onclick="currentSlide(10)" alt="L - Lighthouse" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/a_albino.jpg" onclick="currentSlide(11)" alt="A - Albino Peacock">
+                    <img class="demo cursor" src="images/a_albino.jpg" onclick="currentSlide(11)" alt="A - Albino Peacock" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/g_guitar.jpg" onclick="currentSlide(12)" alt="G - Guitar">
+                    <img class="demo cursor" src="images/g_guitar.jpg" onclick="currentSlide(12)" alt="G - Guitar" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/h_hamburger.jpg" onclick="currentSlide(13)" alt="H - Hamburger">
+                    <img class="demo cursor" src="images/h_hamburger.jpg" onclick="currentSlide(13)" alt="H - Hamburger" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/e_evergreen.jpg" onclick="currentSlide(14)" alt="E - Evergreen">
+                    <img class="demo cursor" src="images/e_evergreen.jpg" onclick="currentSlide(14)" alt="E - Evergreen" width="80" height="39">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/r_rainbow.jpg" onclick="currentSlide(15)" alt="R - Rainbow">
+                    <img class="demo cursor" src="images/r_rainbow.jpg" onclick="currentSlide(15)" alt="R - Rainbow" width="80" height="39">
                 </div>
-            </div>
+            </div>            
 
         </div>
     </main>
     
-    <footer>
+    <footer>    
         <div data-include="components/footer.html"></div>
     </footer>
     <script src="scripts/HTMLInclude.js"></script>
