--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -159,7 +159,7 @@
 
             <div class="mySlides">
                 <div class="numbertext">14 / 15</div>
-                <img src="images/e_evergreen.jpg" style="width:100%" alt="E - Evergreen forest">
+                <img src="images/e_evergreen.jpg" style="width:100%" alt="E - Evergreen Forest">
             </div>
 
             <div class="mySlides">
@@ -176,51 +176,51 @@
 
             <div class="row">
                 <div class="column">
-                    <img class="demo cursor" src="images/c_cat.jpg" onclick="currentSlide(1)" alt="C - Cat" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/c_cat.jpg" onclick="currentSlide(1)" alt="C - Cat">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/o_owl.jpg" onclick="currentSlide(2)" alt="O - Owl" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/o_owl.jpg" onclick="currentSlide(2)" alt="O - Owl">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lake.jpg" onclick="currentSlide(3)" alt="L - Lake" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/l_lake.jpg" onclick="currentSlide(3)" alt="L - Lake">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lantern.jpg" onclick="currentSlide(4)" alt="L - Lantern" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/l_lantern.jpg" onclick="currentSlide(4)" alt="L - Lantern">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/i_icecream.jpg" onclick="currentSlide(5)" alt="I - Ice Cream" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/i_icecream.jpg" onclick="currentSlide(5)" alt="I - Ice Cream">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/n_newyork.jpg" onclick="currentSlide(6)" alt="N - New York" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/n_newyork.jpg" onclick="currentSlide(6)" alt="N - New York">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/g_giraffe.jpg" onclick="currentSlide(7)" alt="G - Giraffe" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/g_giraffe.jpg" onclick="currentSlide(7)" alt="G - Giraffe">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/a_airplane.jpg" onclick="currentSlide(8)" alt="A - Airplane" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/a_airplane.jpg" onclick="currentSlide(8)" alt="A - Airplane">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_leaf.jpg" onclick="currentSlide(9)" alt="L - Leaf" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/l_leaf.jpg" onclick="currentSlide(9)" alt="L - Leaf">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/l_lighthouse.jpg" onclick="currentSlide(10)" alt="L - Lighthouse" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/l_lighthouse.jpg" onclick="currentSlide(10)" alt="L - Lighthouse">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/a_albino.jpg" onclick="currentSlide(11)" alt="A - Albino Peacock" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/a_albino.jpg" onclick="currentSlide(11)" alt="A - Albino Peacock">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/g_guitar.jpg" onclick="currentSlide(12)" alt="G - Guitar" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/g_guitar.jpg" onclick="currentSlide(12)" alt="G - Guitar">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/h_hamburger.jpg" onclick="currentSlide(13)" alt="H - Hamburger" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/h_hamburger.jpg" onclick="currentSlide(13)" alt="H - Hamburger">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/e_evergreen.jpg" onclick="currentSlide(14)" alt="E - Evergreen" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/e_evergreen.jpg" onclick="currentSlide(14)" alt="E - Evergreen Forest">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/r_rainbow.jpg" onclick="currentSlide(15)" alt="R - Rainbow" width="80" height="39">
+                    <img class="demo cursor" src="images/slide/r_rainbow.jpg" onclick="currentSlide(15)" alt="R - Rainbow">
                 </div>
-            </div>            
+            </div>       
 
         </div>
     </main>
