--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -20,7 +20,10 @@
         .mySlides img {
             width: 100%;
             height: auto;
+            max-height: 80vh;
+            object-fit: contain;
         }
+
 
         .numbertext {
             position: absolute;
