--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -11,7 +11,12 @@
             position: relative;
             margin: auto;
             max-width: 800px;
+            background-color: black;
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
         }
+
 
         .mySlides {
             display: none;
@@ -27,11 +32,15 @@
 
         .numbertext {
             position: absolute;
-            top: 0;
+            top: 10px;
+            left: 20px;
             padding: 8px 12px;
-            color: #f2f2f2;
-            font-size: 12px;
+            color: white;
+            font-size: 16px;
+            background-color: rgba(0,0,0,0.5);
+            border-radius: 5px;
         }
+
 
         .prev, .next {
             cursor: pointer;
@@ -43,8 +52,12 @@
             color: crimson;
             font-weight: bold;
             font-size: 24px;
+            background-color: rgba(255, 255, 255, 0.6);
+            border-radius: 50%;
             user-select: none;
+            transform: translateY(-50%);
         }
+
 
         .prev {
             left: 0;
