--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -12,11 +12,12 @@
             margin: auto;
             max-width: 800px;
             background-color: black;
-            padding: 10px;
+            padding: 5px 5px 10px 5px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.5);
+            max-height: 90vh;
+            overflow: hidden;
         }
-
 
         .mySlides {
             display: none;
@@ -25,7 +26,7 @@
         .mySlides img {
             width: 100%;
             height: auto;
-            max-height: 80vh;
+            max-height: 75vh;
             object-fit: contain;
         }
 
