--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -79,8 +79,12 @@
             display: flex;
             justify-content: center;
             margin-top: 10px;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+            overflow-y: hidden;
+            max-width: 100%;
         }
+
 
         .column {
             flex: 0 0 auto;
