--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -79,11 +79,12 @@
             display: flex;
             justify-content: center;
             margin-top: 10px;
-            flex-wrap: nowrap;
-            overflow-x: auto;
-            overflow-y: hidden;
+            flex-wrap: wrap;
+            overflow: visible;
             max-width: 100%;
+            gap: 1px;
         }
+
 
 
         .column {
