--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -154,7 +154,7 @@
 
             <div class="mySlides">
                 <div class="numbertext">9 / 15</div>
-                <img src="images/l_leaf.jpg" style="width:100%" alt="L - Leaf">
+                <img src="images/l_leaf.jpg" style="width:100%" alt="L - Leafs">
             </div>
 
             <div class="mySlides">
@@ -220,7 +220,7 @@
                     <img class="demo cursor" src="images/slide/a_airplane.jpg" onclick="currentSlide(8)" alt="A - Airplane">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="images/slide/l_leaf.jpg" onclick="currentSlide(9)" alt="L - Leaf">
+                    <img class="demo cursor" src="images/slide/l_leaf.jpg" onclick="currentSlide(9)" alt="L - Leafs">
                 </div>
                 <div class="column">
                     <img class="demo cursor" src="images/slide/l_lighthouse.jpg" onclick="currentSlide(10)" alt="L - Lighthouse">
