--- a/itis3135/review1.html
+++ b/itis3135/review1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Peer Review 1 - Gerasymenko, Bogdan</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
     <header>
