--- a/itis3135/review1.html
+++ b/itis3135/review1.html
@@ -13,6 +13,7 @@
     <main>
         <h1>Peer Review 1</h1>
         <h2>Gerasymenko, Bogdan</h2>
+
         <figure>
             <a href="https://webpages.charlotte.edu/rgutknec/itis3135/clientproject/index.html" target="_blank">
                 <img src="images/peer1.png" alt="Screenshot of Gerasymenko's Client Project" style="max-width: 100%;">
@@ -21,19 +22,25 @@
         </figure>
 
         <section>
-            <h3>Evaluation</h3>
+            <h3>Design (CRAP)</h3>
             <ul>
                 <li><strong>Contrast:</strong> Pretty good contrast overall, text is readable against background colors only thing I would say is there is 3 or 4 different text colors used and that there are some colors that are getting contrast errors.</li>
                 <li><strong>Repetition:</strong> Fairly consistent design, the use of sections and borders is proper it helps keep things apart, however there are things like images not showing up, or being different sizes in their respective elements that I would say there could be some work done on those.</li>
                 <li><strong>Alignment:</strong> Elements are aligned well, although some spacing could be refined for even better visual flow, overall it is readable, I would just worry about small screen sizes trying to keep up.</li>
                 <li><strong>Proximity:</strong> Related items are properly grouped, only real thing for this I have is the about page is after all the real meat of the website on the nav bar.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Content</h3>
+            <ul>
                 <li><strong>Header/Main/Footer:</strong> Proper structure present. Site has a clear header, main content, and footer.</li>
                 <li><strong>Navigation:</strong> Navigation bar is present and working properly at all times.</li>
-                <li><strong>Tagline/Slogan:</strong> No tagline present, although not imperative it would be nice to have one.</li>
-                <li><strong>File/Folder Naming:</strong> No uppercase letters or spaces in file or folder names, looking good!  </li>
+                <li><strong>Tagline/Slogan:</strong> No tagline present, although not imperative it would be nice to have one, footer does have company though.</li>
+                <li><strong>File/Folder Naming:</strong> No uppercase letters or spaces in file or folder names, looking good!</li>
                 <li><strong>Validation:</strong> Site has no actual errors, only false ones on things accumulus doesnt recognize, there are some interesting warnings as there are 2 h1 and h2 tags called in cs and 4 h3, but after reviewing they seem to be for different classes.</li>
                 <li><strong>Responsiveness:</strong> Site is mostly responsive, but the site cant fit onto screen at one time and there is no responsiveness for smaller screen sizes.</li>
-                <li><strong>Additional Comments:</strong> 
+                <li><strong>Additional Comments:</strong>
                     <ul>
                         <li>Overall, the site looks professional and cohesive, and it is navagatable, I only really have knitpicky things for improvement to just polish things over.</li>
                         <li>Could benefit from a little more responsiveness for smaller screen sizes, and there could be a little bit of touching up on some image sizes to make things cohesive and repetitive.</li>
@@ -42,10 +49,13 @@
                 </li>
             </ul>
         </section>
+
     </main>
+
     <footer>
         <div data-include="components/footer.html"></div>
     </footer>
+
     <script src="scripts/HTMLInclude.js"></script>
 </body>
 </html>
