--- a/itis3135/review2.html
+++ b/itis3135/review2.html
@@ -2,42 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peer Review 2 - Jackson, Aaliyah</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Peer Review 2</h1>
-    </header>
-
     <main>
-        <h2>Peer: Jackson, Aaliyah</h2>
+        <h1>Peer Review 2</h1>
+        <h2>Jackson, Aaliyah</h2>
 
         <figure>
-            <a href="https://webpages.charlotte.edu/" target="_blank">
-                <img src="images/review2.png" alt="Screenshot of Jackson, Aaliyah's homepage" style="max-width: 100%;">
+            <a href="https://webpages.charlotte.edu/ajack148/project1/index.html" target="_blank">
+                <img src="images/jackson_homepage.png" alt="Screenshot of Aaliyah Jackson's Homepage" style="max-width:100%;">
             </a>
-            <figcaption>Homepage - No client project available for review. (Click to visit homepage)</figcaption>
+            <figcaption>Click the image to visit Aaliyah Jackson's client project page.</figcaption>
         </figure>
 
         <section>
-            <h3>Evaluation</h3>
+            <h2>Evaluation</h2>
             <ul>
-                <li><strong>Website URL:</strong> No client project link provided.</li>
-                <li><strong>Accessibility:</strong> Unable to evaluate due to missing project.</li>
-                <li><strong>Design:</strong> No client project design available to review.</li>
-                <li><strong>Navigation:</strong> Unable to assess navigation without project pages.</li>
-                <li><strong>Content:</strong> No project content available for evaluation.</li>
-                <li><strong>Validation:</strong> Validation not applicable without a working project link.</li>
+                <li><strong>Website Formatting:</strong> The homepage is very minimal and lacks a clear title or explanation about what the page represents.</li>
+                <li><strong>Design:</strong> 
+                    <ul>
+                        <li>Contrast: Adequate, no contrast errors or color issues obvious.</li>
+                        <li>Repetition: Some consistency between pages is visible, but not really much besides main components</li>
+                        <li>Alignment: Center alignment is used but spacing and layout feel a little off with some pages.</li>
+                        <li>Proximity: Content is spaced reasonably, but overall there isnt much content.</li>
+                    </ul>
+                </li>
+                    <h3>Content</h3>
+                    <ul>
+                        <li><strong>Header/Main/Footer:</strong> Not proper structure present in all pages, some missing headings and proper descriptive elements, index is a form page that makes it hard to tell what is going on.</li>
+                        <li><strong>Navigation:</strong> Navigation bar is present and working properly at all times, only thing is home page is not obvious.</li>
+                        <li><strong>Tagline/Slogan:</strong> No tagline present, although not imperative it would be nice to have one, footer does have company though.</li>
+                        <li><strong>File/Folder Naming:</strong> No uppercase letters or spaces in file or folder names, looking good!</li>
+                        <li><strong>Validation:</strong> Site has no errors, only some warnings for some minor things, only big thing I see from it is some possible missalignments.</li>
+                        <li><strong>Responsiveness:</strong> Site is responsive, things work like they should</li>
+                        <li><strong>Additional Comments:</strong>
+                            <ul>
+                                <li>Overall, the site's visuals look good, and it is navagatable, but there seems to be some improvements that could help the page feel a little more polished.</li>
+                                <li>Would benefit from having a more descriptive and detailed index page that explains the book and what it is about, and there could be some touching up on the content itself of the page, the design is overall fine though.</li>
+                                <li>The page works as needed, I just feel like there could be more of the message of what it is and overall some more content, but I like your color scheme and the site as a whole</li>
+                            </ul>
+                        </li>
+                    </ul>
             </ul>
-
-            <p>Unfortunately, since there was no client project available, a full peer review could not be completed. 
-            If the project becomes available later, I would be happy to revisit and provide feedback.</p>
         </section>
-    </main>
+        <footer>
+            <div data-include="components/footer.html"></div>
+        </footer>
 
-    <footer>
-        <p>Review by Collin Gallagher - Spring 2025</p>
-    </footer>
+    </main>
 </body>
 </html>
