--- a/itis3135/review2.html
+++ b/itis3135/review2.html
@@ -12,7 +12,7 @@
 
         <figure>
             <a href="https://webpages.charlotte.edu/ajack148/project1/index.html" target="_blank">
-                <img src="images/jackson_homepage.png" alt="Screenshot of Aaliyah Jackson's Homepage" style="max-width:100%;">
+                <img src="images/peer2.png" alt="Screenshot of Aaliyah Jackson's Homepage" style="max-width:100%;">
             </a>
             <figcaption>Click the image to visit Aaliyah Jackson's client project page.</figcaption>
         </figure>
