--- a/itis3135/review2.html
+++ b/itis3135/review2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/default.css">
     <title>Peer Review 2 - Jackson, Aaliyah</title>
 </head>
 <body>
@@ -50,7 +51,7 @@
         <footer>
             <div data-include="components/footer.html"></div>
         </footer>
-
+        <script src="scripts/HTMLInclude.js"></script>
     </main>
 </body>
 </html>
