--- a/itis3135/review2.html
+++ b/itis3135/review2.html
@@ -7,6 +7,9 @@
     <title>Peer Review 2 - Jackson, Aaliyah</title>
 </head>
 <body>
+    <header>
+        <div data-include="components/header.html"></div>
+    </header>
     <main>
         <h1>Peer Review 2</h1>
         <h2>Jackson, Aaliyah</h2>
