--- a/itis3135/drawing.html
+++ b/itis3135/drawing.html
@@ -7,10 +7,11 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
   <script src="scripts/sketch.js"></script>
 </head>
+
 <body>
-  <header>
-    <div data-include="components/header.html"></div>
-  </header>
+    <header>
+        <div data-include="components/header.html"></div>
+    </header>
   <main>
     <h1>Interactive Drawing with p5.js</h1>
     <h2>Click Around to Create an Abstract Design!</h2>
@@ -18,6 +19,7 @@
   </main>
   <footer>
     <div data-include="components/footer.html"></div>
-  </footer>
+</footer>
+<script src="scripts/HTMLInclude.js"></script>
 </body>
 </html>
