--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 				-
 				<a href="itis3135/">ITIS-3135</a>
 			</nav>
-			<p>Page built by <a href="collincollective.com/index.html">Collin Collective</a>&copy; 2025, <a href="https://www.freecodecamp.org/certification/cjgallagher/responsive-web-design">Certified in Responsive Web Design</a></p>
-		</footer>
+			<p>Page built by <a href="collincollective.com/index.html">Collin Collective</a>&copy; 2025, <a href="https://www.freecodecamp.org/certification/cjgallagher/responsive-web-design">Certified in Responsive Web Design</a> <a href="https://www.freecodecamp.org/certification/cjgallagher/javascript-algorithms-and-data-structures-v8"> and JS</a></p>		</footer>
 	</body>
 </html>
